Upgrade Scala to 2.12.2. Upgrade Play to 2.6.1

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,8 +1,4 @@
 play {
-  crypto {
-    secret = "change-me"
-  }
-
   filters {
     # Mohiva Compressor
     #
@@ -17,6 +13,9 @@ play {
     }
   }
   http {
+    secret {
+      key = "change-me"
+    }
     requestHandler = "handlers.HttpHandler"
     filters = "filters.Filters"
   }
